--- a/shop-dev.properties
+++ b/shop-dev.properties
@@ -12,3 +12,5 @@ ribbon.ReadTimeout=5000
 ribbon.ConnectTimeout=5000
 #hystrix与feign结合的配置
 feign.hystrix.enabled=true
+#publickey
+shop.publickey=liyancaiji
